compiler/test/fail_compilation/imports/pkg17699/datetime/package.d
module pkg17699.datetime;
